# AegisScan

./: .gitignore  README.md  docker-compose.yml  scan.ps1  start.ps1
.github/workflows/: security-scan.yml
backend/: Dockerfile  create_tables.py  pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  findings.py  health.py  keys.py  scans.py  stats.py  targets.py  users.py
backend/app/core/: audit.py  config.py  fingerprint.py  logging.py  notify.py  parser.py  reports.py  risk.py  runner.py  security.py  ssrf.py
backend/app/db/: base.py  session.py
backend/app/models/: audit.py  scan.py  target.py  user.py
backend/app/schemas/: apikey.py  scan.py  target.py  user.py
backend/app/tasks/: scan.py
backend/app/templates/: report.html
backend/cli/: auth.py  main.py
backend/cli/commands/: auth.py  scan.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/auth/: LoginPage.tsx  SignupPage.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/scans/: ScanListPage.tsx  ScanResultsPage.tsx
frontend/src/pages/targets/: TargetCreatePage.tsx  TargetDetailPage.tsx  TargetListPage.tsx
